[gd_scene load_steps=5 format=3 uid="uid://bf7e500m0b46q"]

[ext_resource type="Texture2D" uid="uid://by0wcuso01ntx" path="res://assets/Screenshot 2025-05-15 193335.png" id="1_r67kn"]
[ext_resource type="Script" uid="uid://dlk8l1ftnknif" path="res://scenes/button.gd" id="2_brbbq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8n18e"]
texture = ExtResource("1_r67kn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjwpk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.0962047, 0.0962048, 0.0962047, 0.6)
shadow_offset = Vector2(0, 3.41)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.605274, 0.605274, 0.605274, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8n18e")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = 21.0
offset_right = 139.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_tjwpk")
text = "Play"
script = ExtResource("2_brbbq")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -160.0
offset_right = 270.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
text = "Shadow Runner"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
